--- a/style.css
+++ b/style.css
@@ -6,10 +6,13 @@ body {
     margin: 0;
 }
 
+.content {
+    height: 100vh;
+}
+
 .container {
     max-width: min(150rem, 100%);
-    margin: 0 auto;
-    height: 100vh;
+    margin: 1em auto;
 }
 
 .purple {
@@ -24,9 +27,13 @@ body {
     background-color: rgb(155, 222, 239);
 }
 
+.green {
+    background-color: rgb(202, 224, 139);
+}
+
 .table {
     display: grid;
-    grid-template-columns: repeat(12, 1fr);
+    grid-template-columns: repeat(11, 1fr);
     gap: 0.3em;
 }
 
@@ -124,4 +131,9 @@ body {
 .right .electrons {
     align-items: flex-start;
     padding-right: 1em;
+}
+
+#txt {
+    width: 100%;
+    height: 16em;
 }
