--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@ body {
 }
 
 .container {
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
     max-width: min(150rem, 100%);
     margin: 1em auto;
 }
@@ -29,6 +32,18 @@ body {
 
 .green {
     background-color: rgb(202, 224, 139);
+}
+
+.beige {
+    background-color: rgb(250, 206, 145);
+}
+
+.span-4 {
+    grid-column: span 4;
+}
+
+.span-11 {
+    grid-column: span 11;
 }
 
 .table {
@@ -84,6 +99,14 @@ body {
     flex-direction: column;
 }
 
+.cell.title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2em;
+    font-weight: 700;
+}
+
 .name {
     color: grey;
     font-size: 0.7em;
@@ -136,4 +159,16 @@ body {
 #txt {
     width: 100%;
     height: 16em;
+}
+
+.actin {
+    display: grid;
+    grid-template-columns: repeat(15, 1fr);
+    gap: 0.2em;
+}
+
+.lant {
+    display: grid;
+    grid-template-columns: repeat(15, 1fr);
+    gap: 0.2em;
 }
